Added the ESL_RECORDER module: buffered memory in a line-based input stream. Originally designed for use by the various multiple alignment inputs that need to parse alignment blocks that might be coming from stdin or a pipe.
static is_blankline() functions now in easel.c API as 
esl_str_IsBlank().

Provisional implementation of esl_msafile_clustal.c added (using new
ESL_RECORDER) but still needs testing, unit test code, example code;
is not hooked up to Makefile yet.

Multiple alignment input is now a bit of a mess; I'll work on pulling
it together and adding formats.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@588 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -79,6 +79,7 @@ HDRS = \
 	esl_random.h\
 	esl_randomseq.h\
 	esl_ratematrix.h\
+	esl_recorder.h\
 	esl_regexp.h\
 	esl_rootfinder.h\
 	esl_scorematrix.h\
@@ -129,6 +130,7 @@ OBJS    = \
 	esl_random.o\
 	esl_randomseq.o\
 	esl_ratematrix.o\
+	esl_recorder.o\
 	esl_regexp.o\
 	esl_rootfinder.o\
 	esl_scorematrix.o\
@@ -173,6 +175,7 @@ UTESTS =\
 	esl_random_utest\
 	esl_randomseq_utest\
 	esl_ratematrix_utest\
+	esl_recorder_utest\
 	esl_regexp_utest\
 	esl_rootfinder_utest\
 	esl_scorematrix_utest\
