--- a/Makefile.in
+++ b/Makefile.in
@@ -387,15 +387,15 @@ supertags:
 ## For building as a library with an SSU-ALIGN distribution.
 ##
 ssu:
-	cp miniapps/esl-alimanip miniapps/ssu-esl-alimanip
-	cp miniapps/esl-alimask miniapps/ssu-esl-alimask
-	cp miniapps/esl-alimerge miniapps/ssu-esl-alimerge
-	cp miniapps/esl-alistat miniapps/ssu-esl-alistat
-	cp miniapps/esl-reformat miniapps/ssu-esl-reformat
-	cp miniapps/esl-seqstat miniapps/ssu-esl-seqstat
-	cp miniapps/esl-sfetch miniapps/ssu-esl-sfetch
-	cp miniapps/esl-ssdraw miniapps/ssu-esl-ssdraw
-	cp miniapps/esl-weight miniapps/ssu-esl-weight
+	mv miniapps/esl-alimanip miniapps/ssu-esl-alimanip
+	mv miniapps/esl-alimask miniapps/ssu-esl-alimask
+	mv miniapps/esl-alimerge miniapps/ssu-esl-alimerge
+	mv miniapps/esl-alistat miniapps/ssu-esl-alistat
+	mv miniapps/esl-reformat miniapps/ssu-esl-reformat
+	mv miniapps/esl-seqstat miniapps/ssu-esl-seqstat
+	mv miniapps/esl-sfetch miniapps/ssu-esl-sfetch
+	mv miniapps/esl-ssdraw miniapps/ssu-esl-ssdraw
+	mv miniapps/esl-weight miniapps/ssu-esl-weight
 
 ################################################################
 # @LICENSE@
