Added easel.c::esl_getcwd() - POSIX getcwd(), wrapped with necessary portability and allocation.
bugfix in esl_opt_SpoofCmdline(); allocations were off by one. Amazing and frightening
that this wasn't found before now.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@648 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -412,6 +412,7 @@ AC_CHECK_FUNCS(times)
 AC_CHECK_FUNCS(getpid)
 AC_CHECK_FUNCS(sysctl)
 AC_CHECK_FUNCS(sysconf)
+AC_CHECK_FUNCS(getcwd)
 AC_FUNC_FSEEKO
 
 # 11. Checks for system services 
