--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -75,7 +75,7 @@
 #undef HAVE_SYSCTL
 #undef HAVE_SYSCONF
 #undef HAVE_FSEEKO
-
+#undef HAVE_GETCWD
 #undef HAVE_PTHREADS
 
 /*****************************************************************
