--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -20,11 +20,12 @@ bindir      = @bindir@
 ## your compiler and compiler flags.
 #
 CC        = @CC@
-CFLAGS    = @CFLAGS@
-LDFLAGS   = @LDFLAGS@
+CFLAGS    = @CFLAGS@ @PTHREAD_CFLAGS@
 SIMDFLAGS = @SIMD_CFLAGS@
+CPPFLAGS  = @CPPFLAGS@
+LDFLAGS   = @LDFLAGS@
 DEFS      = @DEFS@
-LIBS      = -leasel @LIBGSL@ @LIBS@ -lm
+LIBS      = -leasel @LIBGSL@ @LIBS@ @PTHREAD_LIBS@ -lm
 
 ## where is Easel?
 #
