Improved handling of numerical roundoff error in esl_rnd_{DF}Choose and esl_rnd_{DF}ChooseCDF(). Now they should never fail (!) and they will no longer throw the (nonstandard, annoying) -1 exception.  They use easel debugging assertions to validate that the probability vector sums to one. Unit testing added for the ChooseCDF()'s.
Bugfix in esl_vec_{DF}CDF(): turns out cdf[i-i] looks a lot like
cdf[i-1].

Some other changes creep in from ongoing writing of esl_buffer (not
yet under subversion):

Easel configure now looks for chmod, stat, fstat.
Starting to test for _POSIX_VERSION to test for POSIX.1 compliant systems
in general, rather than finer-grained tests for individual functions.

easel.c::esl_memnewline() added.
easel.c::esl_FileExists() added, with unit test.

esl_pos_t type, a lowest common denominator signed int that fits both
size_t and off_t, suitable for mmap()'ing whole files to memory, added
to easel.h and defined as int64_t for now. This will need to move to
esl_config.h.in and get configured for a particular system.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@659 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -413,6 +413,9 @@ AC_CHECK_FUNCS(getpid)
 AC_CHECK_FUNCS(sysctl)
 AC_CHECK_FUNCS(sysconf)
 AC_CHECK_FUNCS(getcwd)
+AC_CHECK_FUNCS(chmod)
+AC_CHECK_FUNCS(stat)
+AC_CHECK_FUNCS(fstat)
 AC_FUNC_FSEEKO
 
 # 11. Checks for system services 
