Fixed a portability bug in esl_buffer that was causing unit test failure on linux/gcc platform:
- the correct test for POSIX functionality is to test _POSIX_VERSION, not
  _POSIX_SOURCE. Changed a couple of errant uses of _POSIX_SOURCE.

- _POSIX_SOURCE is a "feature test macro". If defined by an
  application's source code, to 200112L for example, the compilation
  environment enables that POSIX version, and *disables* any
  functionality that's not in that POSIX version. Though it looked
  tempting (to force portable code development), it turns out Easel
  can't define this.  esl_threads.c::esl_threads_CPUCount() is an
  example of Easel trying to use one of several different
  system-dependent alternatives to do something that is not possible
  in vanilla POSIX. Added a "Portability Notes" section to
  perfect_module.tex (to eventually replace codestyle.tex) and made a
  note about this.

- the MAP_FILE option to mmap() is not standard POSIX; removed it.

- need #include <strings.h> for strcasecmp(), sayeth POSIX

- minor tweaks in "make clean"'s, making them clean more (gcov files).

- fixed a void return compile warning in EPN's esl-ssdraw utility.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@667 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -372,7 +372,7 @@ AS_IF([test "x$with_gsl" != xno],
 
 # 6. Checks for header files.
 #    Defines preprocessor symbols like HAVE_UNISTD_H
-AC_CHECK_HEADERS([sys/types.h sys/sysctl.h unistd.h stdint.h inttypes.h endian.h])
+AC_CHECK_HEADERS([sys/types.h sys/sysctl.h unistd.h strings.h stdint.h inttypes.h endian.h])
 
 # altivec.h requires the simd cflags
 # For reasons I don't understand, this needs to come after any other CHECK_HEADERS().
