Added ESL_PIC_FLAGS macro to aclocal.m4, cribbed from Mesa3D project. This sets appropriate compiler flag to generate Position Independent Code (PIC) for shared libraries. Added ESL_PIC_FLAGS call to configure.ac, and @PIC_FLAGS@ to CFLAGS lines in Makefile.in's.
Bugfix in ESL_ALLOC(). A malloc of zero bytes should always succeed,
though the result is implementation defined (C99 spec says an
implementation can either return NULL or a useless non-NULL ptr).
ESL_ALLOC() would throw an exception on implementations that return
NULL. Now it only throws the exception for nonzero allocation sizes.

Additionally, fixed the same bug another way: in
esl_buffer.c::esl_buffer_FetchLine(), if countline returns 0 (an empty
line), catch that and don't try to allocate a buffer for the result;
return *opt_p as NULL.

In the esl_buffer::utest_SetOffset() unit test, put gzipfile, cmd args
inside a HAVE_GZIP test; otherwise, on platforms without gzip (IBM AIX),
compiler will emit an unused variable warning.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@670 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -23,7 +23,7 @@ pdfdir      = @pdfdir@
 # Compiler configuration
 #
 CC       = @CC@
-CFLAGS   = @CFLAGS@ @PTHREAD_CFLAGS@ -fpic
+CFLAGS   = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
 SIMDFLAGS= @SIMD_CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS  = @LDFLAGS@
