--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -20,7 +20,7 @@ bindir      = @bindir@
 ## your compiler and compiler flags.
 #
 CC        = @CC@
-CFLAGS    = @CFLAGS@ @PTHREAD_CFLAGS@
+CFLAGS    = @CFLAGS@ @PTHREAD_CFLAGS@ @PIC_FLAGS@
 SIMDFLAGS = @SIMD_CFLAGS@
 CPPFLAGS  = @CPPFLAGS@
 LDFLAGS   = @LDFLAGS@
